# trading_automation

./: .env  .gitignore  dev.ipynb  main.py  py5paisa.txt  pyproject.toml  script_data_eq.csv  script_data_fo.csv  start.bat
src/: excel_operations.py  exceldata.py  file_operations.py  login.py  order_database.py  orders.py  place_order.py  py5paisa1.py  scriptcodes.py  session.py  token_generator.py  totp.py  trade_logging.py
tests/: test_files.py
